<resources>
    <string name="app_name">GurmeDefteri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">zOpen Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">Forgot Your Password?</string>
    <string name="LogIn">LOG IN</string>
    <string name="Donthaveaccount">Dont Have An Account?</string>
    <string name="Register"> Create One!</string>
    <string name="FullName">Full Name</string>
    <string name="Age">Age</string>
    <string name="SignIn">SIGN IN</string>
    <string name="haveaccount">Do You Have An Account?</string>
    <string name="returnLogin">Log In!</string>
    <string name="delete">DELETE</string>
    <string name="updateUser">UPDATE</string>
    <string name="didntFind">FOOD IS NOT FOUND</string>
    <string name="didntFindScoredFood">SCORED FOOD IS NOT FOUND</string>
    <string name="homePage">Home Page</string>
    <string name="scoredFood">Scored Food</string>
    <string name="profile">Profile</string>
    <string name="profileSettings">Profile Settings</string>
    <string name="logout">Logout</string>
    <string name="mainFood">Main Foods</string>
    <string name="soapFood">Soap Foods</string>
    <string name="desertFood">Desert Foods</string>
    <string name="drinkFood">Drink Foods</string>
</resources>