<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SigninScreenFragment">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnLogin"
        android:textColor="#9517E3"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_pass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/haveaccount"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/sign_in_pass"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/email"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="text"
        android:paddingStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/FullName"
        android:inputType="text|textPersonName"
        android:maxLength="50"
        android:paddingStart="9dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

    <EditText
        android:id="@+id/sign_in_age"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:drawablePadding="9dp"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="number"
        android:maxLength="3"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_name" />

    <EditText
        android:id="@+id/sign_in_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/ic_lock_login"
        android:drawableEnd="@drawable/password_eye_2"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_age" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_login_design"
        android:text="@string/SignIn"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_pass"
        app:layout_constraintStart_toStartOf="@+id/sign_in_pass"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_pass" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="119dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="88dp" />

</androidx.constraintlayout.widget.ConstraintLayout>