<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginScreenFragment">

    <EditText
        android:id="@+id/login_screen_email_textview"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="3dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/login_screen_password_textview"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/ic_lock_login"
        android:drawableEnd="@drawable/password_eye_2"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="3dp"
        android:paddingEnd="5dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/login_screen_email_textview"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_email_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_login_design"
        android:text="@string/LogIn"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/login_screen_password_textview"
        app:layout_constraintStart_toStartOf="@+id/login_screen_password_textview"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/Donthaveaccount"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintEnd_toStartOf="@+id/textViewRegister"
        app:layout_constraintStart_toStartOf="@+id/login_screen_password_textview"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="#5567DD"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/login_screen_password_textview"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/ForgotPassword"
        android:textColor="#5567DD"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/login_screen_password_textview"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_password_textview" />
</androidx.constraintlayout.widget.ConstraintLayout>