<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="1608dp"
        android:text="Çıkış Yap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/person"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/FullName"
        android:inputType="text"
        android:maxLength="50"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="text"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_age"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/date"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="number"
        android:maxLength="3"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_email"
        app:layout_constraintStart_toStartOf="@+id/profile_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <EditText
        android:id="@+id/profile_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_input"
        android:drawableStart="@drawable/ic_lock_login"
        android:drawableEnd="@drawable/password_eye_2"
        android:drawablePadding="2dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_age"
        app:layout_constraintStart_toStartOf="@+id/profile_age"
        app:layout_constraintTop_toBottomOf="@+id/profile_age" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUpdateUser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_login_design"
        android:text="@string/updateUser"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_delete_design"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonUpdateUser"
        app:layout_constraintTop_toTopOf="@+id/buttonUpdateUser" />

</androidx.constraintlayout.widget.ConstraintLayout>